# aristaeus_v2

./: config.yml  protoss_builds.yml  pyproject.toml  run.py
ares-sc2/: pyproject.toml
bot/: main.py
bot/behaviors/: construct_building.py  oracle_kite_forward.py
bot/combat/: oracle_harass.py  oracle_scout.py  tempest_offensive.py
bot/managers/: cannon_rush_manager.py  new_cannon_rush_manager.py  oracle_manager.py  production_manager.py
bot/tools/: calculations.py  cannon_placement.py  grids.py  new_cannon_placement.py
data/: None-protoss.json
scripts/: upload_to_ai_arena.py
